fix: increase contrast of text colour on inactive nav tabs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -20922,7 +20922,7 @@ td.col-device-auto {
 }
 
 .nav-tabs .nav-link {
-  color: #888;
+  color: #555;
   background-color: #F9F9F9;
   border-color: #f5f7fa;
   border-radius: 0;
