--- a/resources/assets/sass/_events.scss
+++ b/resources/assets/sass/_events.scss
@@ -253,7 +253,7 @@
         font-family: $font-family-sans-serif;
     }
     .nav-link {
-        color: #888;
+        color: #555;
         background-color: #F9F9F9;
         border-color: $brand-grey;
         border-radius: 0;
